<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_delete"
        android:title="Delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="always" />
</menu>
