...
        android:layout_height="wrap_content"
        app:boxStrokeColor="?attr/colorPrimary"
        app:boxBackgroundMode="outline"
        android:layout_marginBottom="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPassword"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

...
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_register"
        android:text="Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp"/>
...
