<resources>
    <string name="app_name">Team 5</string>
    <string name="login">Login</string>
    <string name="register">Register New Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to Register</string>
</resources>